--- a/templates/allPost.html
+++ b/templates/allPost.html
@@ -64,14 +64,8 @@
         <a class="navbar-link">
           <div class="label"><span>Super Admin</span></div>
         </a>
-        <div class="navbar-dropdown">
-          <a class="navbar-item">
-            <span class="icon"><i class="mdi mdi-logout"></i></span>
-            <span>Log Out</span>
-          </a>
-        </div>
       </div>
-      <a title="Log out" class="navbar-item desktop-icon-only">
+      <a title="Log out" class="navbar-item desktop-icon-only" href="/login">
         <span class="icon"><i class="mdi mdi-logout"></i></span>
         <span>Log out</span>
       </a>
@@ -152,7 +146,7 @@
             {% for post in all_post %}
             <tr>
               <td class="checkbox-cell">
-                <label > 
+                <label class="checkbox"> 
                   <input type="checkbox" name="clinic_info1" value="{{ post[1] }}">
                   <span class="check" name="clinic_info1" value="{{ post[1] }}"></span>
                 </label>
@@ -178,7 +172,7 @@
           {% endfor %}
         </tbody>
       </table>
-      <div class="table-pagination">
+      <!-- <div class="table-pagination">
         <div class="flex items-center justify-between">
           <div class="buttons">
             <button type="button" class="button active">1</button>
@@ -187,15 +181,12 @@
           </div>
           <small>Page 1 of 3</small>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
 </form>
 </div>
-
-<!-- Scripts below are for demo only -->
-<!-- <script type="text/javascript" src="js/main.min.js?v=1628755089081"></script> -->
 
 <!-- Logout and block previous page  -->
 <script type="text/javascript">
@@ -208,49 +199,6 @@
   window.onpageshow = function(evt) { if (evt.persisted) noBack() }
   window.onunload = function() { void (0) }
 </script>
-
-<script>
-
-const elToggle  = document.querySelector("#toggle1");
-const elContent = document.querySelector("#content1");
-
-  elToggle.addEventListener("click", function() {
-  elContent.classList.toggle("is-hidden1");
-});
-
-const elToggle2  = document.querySelector("#toggle2");
-const elContent2 = document.querySelector("#content2");
-
-  elToggle2.addEventListener("click", function() {
-  elContent2.classList.toggle("is-hidden2");
-});
-
-const elToggle3  = document.querySelector("#toggle3");
-const elContent3 = document.querySelector("#content3");
-
-  elToggle3.addEventListener("click", function() {
-  elContent3.classList.toggle("is-hidden3");
-});
-
-const elToggle4  = document.querySelector("#toggle4");
-const elContent4 = document.querySelector("#content4");
-
-  elToggle4.addEventListener("click", function() {
-  elContent4.classList.toggle("is-hidden4");
-});
-
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '658339141622648');
-  fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=658339141622648&ev=PageView&noscript=1"/></noscript>
 
 <!-- Icons below are for demo only. Feel free to use any icon pack. Docs: https://bulma.io/documentation/elements/icon/ -->
 <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.9.95/css/materialdesignicons.min.css">
