--- a/templates/login.html
+++ b/templates/login.html
@@ -68,7 +68,7 @@
           <div class="field spaced">
             <label class="label">Password</label>
             <p class="control icons-left">
-              <input class="input" type="password" name="pass" placeholder="Password" autocomplete="current-password" name="pass" id="pass" required>
+              <input class="input" type="password" name="pass" placeholder="Password" autocomplete="current-password" id="pass" required>
               <span class="icon is-small left"><i class="mdi mdi-asterisk"></i></span>
             </p>
             <p class="help">Please enter your password</p>
@@ -102,44 +102,6 @@
     setTimeout("preventBack()", 0);
     window.onunload = function () { null };
 </script>
-
-
-<!-- <script>
-
-  function myFunction(){
-    const email = document.getElementById('email').value;    
-    const pass = document.getElementById('pass').value;    
-    if ((em =='krishnapal.starwebindia@gmail.com') && (pass == 123456)){
-      // open("index.html");
-      alert('this is true')
-    }
-    else
-    {
-      alert("please enter valid value")
-    }
-  }
-</script> -->
-
-<!-- Scripts below are for demo only -->
-<!-- <script type="text/javascript" src="/static/js/main.min.js"></script> -->
-
-
-<!-- <script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '658339141622648');
-  fbq('track', 'PageView');
-</script> -->
-<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=658339141622648&ev=PageView&noscript=1"/></noscript>
-
-<!-- Icons below are for demo only. Feel free to use any icon pack. Docs: https://bulma.io/documentation/elements/icon/ -->
-<link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.9.95/css/materialdesignicons.min.css">
 
 </body>
 </html>
